# DRoASMS

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_PLAN.md  RELEASE_SUMMARY.md  alembic.ini  compose.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  cython-compile.yml  mypc-compile.yml  tests-matrix.yml
docker/: Dockerfile  Dockerfile.dev  postgres.Dockerfile  test.Dockerfile
docker/init/: 001_extensions.sql
docs/: COUNCIL_SERVICE_MIGRATION_GUIDE.md  RESULT_MIGRATION_GUIDE.md  RESULT_SERVICE_STATUS.md  developer-onboarding.md  transfer-event-pool.md  unified-compiler-guide.md
docs/api/: README.md
docs/architecture/: README.md  overview.md
docs/baselines/: cython_pre_migration.json
docs/contributing/: README.md
docs/guides/: README.md  deployment.md  development.md  installation.md
docs/modules/: README.md
docs/reference/: README.md
openspec/: project.md
scripts/: bench_economy.py  check_coverage.py  check_image_layers.sh  compile_governance_modules.py  compile_modules.py  compile_time_benchmark.py  concurrency_performance_test.py  cython_compiler.py  deploy_governance_modules.sh  memory_leak_test.py  migrate_to_result.py  migrate_unified_config.py  mypyc_economy_setup.py  performance_baseline_test.py  reconcile_sc_balances.py  release.sh  result_migration_report.py
scripts/archive/: compile_governance_modules.py  deploy_governance_modules.sh  mypyc_economy_setup.py
src/bot/: __init__.py  interaction_compat.py  main.py
src/common/: __init__.py  errors.py  result.py
src/config/: db_settings.py  departments.json  settings.py
src/cython_ext/: __init__.py  council_governance_models.py  council_governance_models.pyx  currency_models.py  currency_models.pyx  economy_adjustment_models.py  economy_adjustment_models.pyx  economy_balance_models.py  economy_balance_models.pyx  economy_configuration_models.py  economy_configuration_models.pyx  economy_query_models.py  economy_query_models.pyx  economy_transfer_models.py  economy_transfer_models.pyx  government_registry_models.py  government_registry_models.pyx  pending_transfer_models.py  pending_transfer_models.pyx  state_council_models.py  state_council_models.pyx  supreme_assembly_models.py  supreme_assembly_models.pyx  transfer_pool_core.py  transfer_pool_core.pyx
src/db/: pool.py
src/infra/: db_errors.py  migration_tools.py  result.py  result_compat.py  retry.py
tests/: conftest.py  test_db_errors.py  test_db_pool.py  test_result.py
tests/commands/: test_supreme_assembly_signature.py
tests/config/: test_settings.py
tests/contracts/: _utils.py  test_adjust_command_contract.py  test_balance_history_command_contract.py  test_company_command_contract.py  test_compose_env_schema.py  test_council_panel_contract.py  test_currency_config_command_contract.py  test_help_command_contract.py  test_log_masking.py  test_log_ready_event_schema.py  test_personal_panel_command_contract.py  test_state_council_command_contract.py  test_state_council_contract_simple.py  test_state_council_panel_contract.py  test_supreme_assembly_command_contract.py  test_transfer_command_contract.py  test_transfer_event_pool_contract.py
tests/db/: test_fn_adjust_balance.sql  test_fn_attempt_cancel_proposal.sql  test_fn_business_license.sql  test_fn_check_and_approve_transfer.sql  test_fn_check_transfer_balance.sql  test_fn_check_transfer_cooldown.sql  test_fn_check_transfer_daily_limit.sql  test_fn_companies.sql  test_fn_count_active_proposals.sql  test_fn_create_currency_issuance.sql  test_fn_create_identity_record.sql  test_fn_create_interdepartment_transfer.sql  test_fn_create_pending_transfer.sql  test_fn_create_proposal.sql  test_fn_create_tax_record.sql  test_fn_create_welfare_disbursement.sql  test_fn_export_interval.sql  test_fn_fetch_tally.sql  test_fn_get_balance.sql  test_fn_get_council_config.sql  test_fn_get_department_config.sql  test_fn_get_history.sql  test_fn_get_pending_transfer.sql  test_fn_get_proposal.sql  test_fn_get_snapshot_members.sql  test_fn_get_state_council_config.sql  test_fn_get_supreme_assembly_config.sql  test_fn_has_more_history.sql  test_fn_is_sa_account.sql  test_fn_list_active_proposals.sql  test_fn_list_all_department_configs_for_issuance.sql  test_fn_list_all_department_configs_with_welfare.sql  test_fn_list_currency_issuances.sql  test_fn_list_department_configs.sql  test_fn_list_due_proposals.sql  test_fn_list_government_accounts.sql  test_fn_list_identity_records.sql  test_fn_list_interdepartment_transfers.sql  test_fn_list_pending_transfers.sql  test_fn_list_reminder_candidates.sql  (+20 more)
tests/economy/: test_adjustments.py  test_balances.py  test_history.py  test_transfers.py
tests/fixtures/: command_base.py  discord_mocks.py  permission_fixtures.py  result_helpers.py
tests/infra/: test_result_container_registration.py
tests/integration/: test_compose_dependencies.py  test_compose_ready.py  test_compose_restart_update.py  test_cross_command_interactions.py  test_currency_config_integration.py  test_db_not_ready_retry.py  test_economy_flow.py  test_external_db_override.py  test_external_db_unavailable_exit_69.py  test_government_applications_flow.py  test_help_command_integration.py  test_invalid_env_schema_fails.py  test_migration_failure_exit_code.py  test_missing_env_fails_fast.py  test_multi_guild.py  test_result_integration.py  test_retry_backoff_params.py  test_state_council_flow.py  test_supreme_assembly_flow.py  test_transfer_event_pool_flow.py  test_transfer_initiator_notification.py  test_transfer_ui_cross_panel.py
tests/performance/: test_council_service_benchmarks.py  test_council_voting.py  test_cython_runtime.py  test_department_registry_performance.py  test_economy_latency.py  test_mypc_benchmarks.py  test_mypyc_benchmarks.py  test_state_council_operations.py  test_supreme_assembly_group_perf.py
tests/scripts/: test_performance_monitor.py
tests/unit/: test_adjust_command.py  test_adjustment_service.py  (+83 more)
(+424 files in other folders)
