[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "droasms-bot"
version = "0.14.0"
description = "Discord bot economy foundations."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "DRoASMS Team" },
]
dependencies = [
    "discord.py>=2.4.0,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.13.0,<2.0.0",
    "SQLAlchemy>=2.0.30,<3.0.0",
    "structlog>=24.1.0,<25.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "dpy-paginator @ git+https://github.com/Seniatical/dpy-paginator/",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "faker>=30.0.0",
    "mypy>=1.11.0,<2.0.0",
    "ruff>=0.6.0,<0.7.0",
    "black>=24.8.0,<25.0.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.0.0",
    "typer>=0.12.0",
    "rich>=14.0.0",
    "watchfiles>=1.0.0",
    "setuptools>=68.0.0",
    "wheel>=0.43.0",
    "types-setuptools>=80.9.0.20250822",
    "pylance>=0.39.0",
    "pyright>=1.1.407",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "ASYNC",
    "B",
    "C4",
]

[tool.ruff.lint.per-file-ignores]
"src/db/migrations/versions/*.py" = ["E501", "I001"]
"src/db/seeds/*.py" = ["E501"]
"tests/**/*.py" = ["E501"]
"src/bot/commands/state_council.py" = ["E501"]
"src/db/migrations/env.py" = ["I001"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = "\\.pyi?$"

[tool.pyright]
include = ["src"]
exclude = [
  "**/__pycache__/**",
  "alembic/**",
  "src/db/migrations/**",
  "src/db/seeds/**",
  "tests/**",
  "htmlcov/**",
]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = ".", extraPaths = ["src"] }
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=src --cov-report=html --cov-report=term --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "performance: Performance and load tests for NFR validation",
    "integration: Integration tests that require Docker/Discord; gated by RUN_DISCORD_INTEGRATION_TESTS",
    "timeout: Test timeout marker for pytest-timeout plugin",
]
# 並行測試設定：使用 pytest-xdist，透過命令列參數 -n auto 或 -n N 控制
# pytest-xdist 不支援在配置檔案中設定 n_workers，需在命令列指定
timeout = 300
timeout_method = "thread"

[tool.mypy]
python_version = "3.13"
namespace_packages = true
files = ["src"]
exclude = [
    "build/",
    "dist/",
]
explicit_package_bases = true
enable_error_code = "ignore-without-code"
strict = true

[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "asyncpg.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.db.migrations.versions.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.bot.*",
    "src.config.*",
]
disable_error_code = ["attr-defined", "method-assign", "misc", "call-arg"]

[[tool.mypy.overrides]]
module = [
    "discord",
    "discord.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pydantic_settings",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "alembic",
    "alembic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "structlog",
    "structlog.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tenacity",
    "tenacity.*",
    "dotenv",
    "python-dotenv",
    "pydantic",
    "pydantic.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.db.migrations.env",
]
ignore_errors = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# 預先配置 mypyc（未在本變更中啟用實際編譯，僅提供基本設定以利未來優化）
[tool.mypyc]
# 僅針對經濟模塊啟用 mypyc 編譯（漸進式導入）
# 如需擴大範圍，請更新此清單。
targets = [
    "src/bot/services/adjustment_service.py",
    "src/bot/services/transfer_service.py",
    "src/bot/services/balance_service.py",
    "src/bot/services/transfer_event_pool.py",
    "src/bot/services/currency_config_service.py",
    "src/db/gateway/economy_adjustments.py",
    "src/db/gateway/economy_transfers.py",
    "src/db/gateway/economy_queries.py",
    "src/db/gateway/economy_pending_transfers.py",
    "src/db/gateway/economy_configuration.py",
]

# 編譯選項（預設在本地開發可輕量化，CI/生產可視需要調高）
opt_level = 3
debug_level = 1
strict_dunder_typing = false
log_trace = false

# 排除測試與遷移腳本
exclude = ["tests", "src/db/migrations", "alembic"]
