[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "droasms-bot"
version = "0.23.2"
description = "Discord bot economy foundations."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "DRoASMS Team" },
]
dependencies = [
    "discord.py>=2.4.0,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.13.0,<2.0.0",
    "SQLAlchemy>=2.0.30,<3.0.0",
    "structlog>=24.1.0,<25.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "mypy-extensions>=1.0.0,<2.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "dpy-paginator @ git+https://github.com/Seniatical/dpy-paginator/",
    "Cython>=3.0.8,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "faker>=33.0.0",
    "mypy>=1.13.0,<2.0.0",
    "ruff>=0.7.3,<0.8.0",
    "black>=24.10.0,<25.0.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.111.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "watchfiles>=1.0.0",
    "setuptools>=75.0.0",
    "wheel>=0.44.0",
    "types-setuptools>=80.9.0.20250822",
    "pylance>=0.39.0",
    "pyright>=1.1.407",
    "psutil>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "ASYNC",
    "B",
    "C4",
]

[tool.ruff.lint.per-file-ignores]
"src/db/migrations/versions/*.py" = ["E501", "I001"]
"src/db/seeds/*.py" = ["E501"]
"tests/**/*.py" = ["E501"]
"src/bot/commands/state_council.py" = ["E501"]
"src/db/migrations/env.py" = ["I001"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = "\\.pyi?$"

[tool.pyright]
include = ["src"]
exclude = [
  "**/__pycache__/**",
  "alembic/**",
  "src/db/migrations/**",
  "src/db/seeds/**",
  "tests/**",
  "htmlcov/**",
]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = "none"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=src --cov-report=html --cov-report=term --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "performance: Performance and load tests for NFR validation",
    "unit: Unit tests",
    "asyncio: Async tests",
    "integration: Integration tests that require Docker/Discord; gated by RUN_DISCORD_INTEGRATION_TESTS",
    "timeout: Test timeout marker for pytest-timeout plugin",
    "contract: Contract tests for API and behavior contracts",
]
# 並行測試設定：使用 pytest-xdist，透過命令列參數 -n auto 或 -n N 控制
# pytest-xdist 不支援在配置檔案中設定 n_workers，需在命令列指定

[tool.pytest-timeout]
timeout = 300
timeout_method = "thread"

[tool.mypy]
python_version = "3.13"
namespace_packages = true
files = ["src"]
exclude = [
    "build/",
    "dist/",
]
explicit_package_bases = true
enable_error_code = "ignore-without-code"
strict = true

[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "asyncpg.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.db.migrations.versions.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.bot.*",
    "src.config.*",
]
disable_error_code = ["attr-defined", "method-assign", "misc", "call-arg"]

[[tool.mypy.overrides]]
module = [
    "discord",
    "discord.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pydantic_settings",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "alembic",
    "alembic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "structlog",
    "structlog.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tenacity",
    "tenacity.*",
    "dotenv",
    "python-dotenv",
    "pydantic",
    "pydantic.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.db.migrations.env",
]
ignore_errors = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# 全新的 Cython 編譯器配置
[tool.cython-compiler]
build_dir = "build/cython"
cache_dir = "build/cython/.cache"
annotate = true
language_level = 3
parallel = "auto"  # auto模式測試結果顯示最佳性能（5.5%提升）
force_rebuild = false
line_directives = false
profile = true  # 啟用性能分析以監控熱點函數
baseline_file = "build/cython/baseline_pre_migration.json"
environment_file = "build/cython/environment.json"
test_command = ["pytest", "-m", "performance", "--maxfail=1", "-q"]
summary_file = "build/cython/compile_report.json"
metrics = ["compile_time_seconds", "success_rate", "peak_memory_mb"]

[tool.cython-compiler.alert-thresholds]
compile_time_percent = 10.0
success_rate_percent = 2.0
peak_memory_mb = 2048.0

[[tool.cython-compiler.targets]]
name = "currency-config-models"
group = "economy"
source = "src/cython_ext/currency_models.pyx"
module = "src.cython_ext.currency_models"
description = "Dataclasses and helpers shared by currency configuration services"
stage = "week1"

[[tool.cython-compiler.targets]]
name = "economy-configuration-models"
group = "economy"
source = "src/cython_ext/economy_configuration_models.pyx"
module = "src.cython_ext.economy_configuration_models"
description = "Gateway dataclasses for economy configuration tables"
stage = "week1"

[[tool.cython-compiler.targets]]
name = "economy-query-models"
group = "economy"
source = "src/cython_ext/economy_query_models.pyx"
module = "src.cython_ext.economy_query_models"
description = "Balance and history record containers"
stage = "week1"

[[tool.cython-compiler.targets]]
name = "council-governance-models"
group = "governance"
source = "src/cython_ext/council_governance_models.pyx"
module = "src.cython_ext.council_governance_models"
description = "Council governance dataclasses"
stage = "week1"

[[tool.cython-compiler.targets]]
name = "supreme-assembly-governance-models"
group = "governance"
source = "src/cython_ext/supreme_assembly_models.pyx"
module = "src.cython_ext.supreme_assembly_models"
description = "Supreme assembly governance dataclasses"
stage = "week1"

[[tool.cython-compiler.targets]]
name = "government-registry-models"
group = "governance"
source = "src/cython_ext/government_registry_models.pyx"
module = "src.cython_ext.government_registry_models"
description = "Shared registry DTOs"
stage = "week1"

[[tool.cython-compiler.targets]]
name = "economy-balance-models"
group = "economy"
source = "src/cython_ext/economy_balance_models.pyx"
module = "src.cython_ext.economy_balance_models"
description = "Balance snapshot/history data containers and helpers"
stage = "week2"

[[tool.cython-compiler.targets]]
name = "economy-transfer-models"
group = "economy"
source = "src/cython_ext/economy_transfer_models.pyx"
module = "src.cython_ext.economy_transfer_models"
description = "Transfer procedure/result conversion helpers"
stage = "week2"

[[tool.cython-compiler.targets]]
name = "economy-adjustment-models"
group = "economy"
source = "src/cython_ext/economy_adjustment_models.pyx"
module = "src.cython_ext.economy_adjustment_models"
description = "Adjustment procedure/result conversion helpers"
stage = "week2"

[[tool.cython-compiler.targets]]
name = "pending-transfer-models"
group = "economy"
source = "src/cython_ext/pending_transfer_models.pyx"
module = "src.cython_ext.pending_transfer_models"
description = "Pending transfer record container"
stage = "week2"

[[tool.cython-compiler.targets]]
name = "transfer-pool-core"
group = "economy"
source = "src/cython_ext/transfer_pool_core.pyx"
module = "src.cython_ext.transfer_pool_core"
description = "Transfer event pool check state tracker"
stage = "week2"

[[tool.cython-compiler.targets]]
name = "state-council-models"
group = "governance"
source = "src/cython_ext/state_council_models.pyx"
module = "src.cython_ext.state_council_models"
description = "State council governance/shared DTOs"
stage = "week2"
